= aurelhy News

== aurelhy version 1.0-7

* Title set in title case. Complete sentence in description, and other notes
  that complain in R CMD check with R 3.2.1.

* Recompression of the example datasets (R CMD build --resave-data).


== aurelhy version 1.0-6

* Calculation of central sector in case of rectangular grid was incorect in the
  aurelhy() function (bug report by Pierre Lassegues). Corrected.
  
* Transformation of latitude/longitude in decimal degrees assumed one degree
  equals 110.9km. This is not true (even close to) everywhere on earth! New
  function deg.lat() and deg.lon() now calculate this distance according to
  latitude according to the WGS84 ellipsoid model. All function depending on
  the conversion from latitude/longitude degrees into km now use these
  calcuations. However, for the sake of simplicity of the algorithms, a single
  conversion factor matching the latitude at the center of the geographic area
  under consideration is used. Functions affected by this change are: aurelhy(),
  auremask() and polar.coords().


== aurelhy version 1.0-5

* Check of argument passed through ... in update() and issue an error message.

* A new dependence to package sp is added. Dependence to shapefiles package
  becomes a suggestion (it is not strictly required for the execution of the
  AURELHY interpolation).


== aurelhy version 1.0-4

* Added a function dist2sea() by Francois Delobel.

* More flexibility in the size of add.vars: can be on same grid as geotm, or
  same grid as the final landscape descriptors.

* To avoid confusion between the mask used to determine which points to
  consider and the mask used to select sectors for landscape predictors
  calculation, the latter one is renamed "window of analysis".
  
* mbord and mmask data are not strictly Morocco territory, but a landscape
  around Morocco that is the target of the example analysis. Corresponding
  help pages are modified accordingly.


== aurelhy version 1.0-3
