@@ -7,6 +7,8 @@
 
 * Recompression of the example datasets (R CMD build --resave-data).
 
+* Added svUnit support for test units.
+
 
 == aurelhy version 1.0-6
 
